--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "restaurant",
   "version": "1.0.0",
   "description": "For this project i will be using webpack for bundling and compiling different types of files. This project consist in a webpage for a restaurant created using HTML, CSS, JavaScript and webpack",
-  "main": "index.js",
+  "private":"true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
